Added css and images for index page. Added required non paragraph elements to index

--- a/project3/index.html
+++ b/project3/index.html
@@ -12,11 +12,26 @@
 
 	<body>
 		<header>
-
+			<h1>Computer Components</h1>
 		</header>
 
 		<main>
+			<h2>CPU</h2>
+			<img src="images/cpu.png">
+			<p>Foo</p>
 
+
+			<h2>GPU</h2>
+			<img src="images/gpu.png">
+			<p>Foo</p>
+
+			<h2>Storage</h2>
+			<img src="images/storage.png">
+			<p>Foo</p>
+
+			<form action="quiz.html">
+				<input type="submit" value="Take the Quiz!">
+			<form>
 		</main>
 
 		<footer>
