Added CPU paragraph. adjusted css.

--- a/project3/index.html
+++ b/project3/index.html
@@ -18,7 +18,9 @@
 		<main>
 			<h2>CPU</h2>
 			<img src="images/cpu.png">
-			<p>Foo</p>
+			<p>CPU stands for Central Processing Unit. The CPU is the heart and brain of modern computers. The CPU runs instructions for the computer such as adding two numbers or storing a value. The number of instructions the CPU can run per second is refered to as the Clock Speed. Processors that can run multiple instructions at once are sometimes refered to as "multi-core CPU".</p>
+
+			<p>Currently there are two major companies in the CPU Market. These companies are named Intel and AMD (Advanced Micro Devices, Inc.). Sometimes you can hear them refered to as "Team Blue" (Intel) and "Team Red" (AMD). Their most current CPUs are the 11th gen Intel (Intel) and the Ryzen 5000 series (AMD). In the past processors from Intel have focused on single-core preformance, while processors from AMD have focused on multi-core preformance</p>
 
 
 			<h2>GPU</h2>
