Added alt text for images

--- a/project3/index.html
+++ b/project3/index.html
@@ -17,20 +17,20 @@
 
 		<main>
 			<h2>CPU</h2>
-			<img src="images/cpu.png">
+			<img src="images/cpu.png" alt="CPU">
 			<p>CPU stands for Central Processing Unit. The CPU is the heart + brain of modern computers. The CPU runs instructions for the computer such as adding two numbers or storing a value. The number of instructions the CPU can run per second is refered to as the Clock Speed. Processors that can run multiple instructions at once are sometimes refered to as "multi-core CPU".</p>
 
 			<p>Currently there are two major companies in the CPU Market. These companies are named Intel and AMD (Advanced Micro Devices, Inc.). Sometimes you can hear them refered to as "Team Blue" (Intel) and "Team Red" (AMD). Their most current CPUs are the 11th gen Intel (Intel) and the Ryzen 5000 series (AMD). In the past processors from Intel have focused on single-core preformance, while processors from AMD have focused on multi-core preformance</p>
 
 
 			<h2>GPU</h2>
-			<img src="images/gpu.png">
+			<img src="images/gpu.png" alt="GPU">
 			<p>GPU stands for Graphical Processing Unit. The GPU is the Eyes + Brain of modern computers. The GPU runs many instructions simultaniously for the computer such as inverting the color of an image. The number of floating point operations the FPU can run per second is refered to as FLOPS. Modern GPU can have up to 285,000,000,000,000 FLOPS</p>
 
 			<p>Currently there are two major companies in the GPU Market. These companies are named Nvidia and AMD (Advanced Micro Devices, Inc.). Sometimes you can hear them refered to as "Team Green" (Nvidia) and "Team Red" (AMD). Their most current CPUs are the RTX 3000 series (Nvidia) and the Radeon 6000 series (AMD). In the past, Nvidia had dominated the GPU market; however, AMD is now making headway through GPU for personal computer and gaming consoles</p>
 
 			<h2>Storage</h2>
-			<img src="images/storage.png">
+			<img src="images/storage.png" alt="Storage">
 			<p>Foo</p>
 
 			<form action="quiz.html">
