Added Storage text

--- a/project3/index.html
+++ b/project3/index.html
@@ -31,7 +31,9 @@
 
 			<h2>Storage</h2>
 			<img src="images/storage.png" alt="Storage">
-			<p>Foo</p>
+			<p>There are two main types on computer storage in use currently. These are Hard drives and Solid State Drives (SSD). Hard drives utalize spinning magnetic platters to store information. SSD; however, use transistors to store information instead. The smallest unit of information a computer stores is refered to as a bit. These bits represent trues and falses; and can be refered to as 0 or 1.</p>
+
+			<p>SSDs, in general, are faster than hard drives. This leads to them being used in favor of hard drives in modern computing solutions that require fast storage. Hard drives; however, have a lower cost per bit. This leads to them being used in favor of solid state drives in larger long term storage solutions. Both forms of storage; however, can be leveraged by the computer to store information for later use.</P> 
 
 			<form action="quiz.html">
 				<input type="submit" value="Take the Quiz!">
