added css for quiz page

--- a/project3/quiz.html
+++ b/project3/quiz.html
@@ -17,37 +17,37 @@
 
 		<main>
 			<form>
-				Which of these companies does not make CPU?<br>
-				<label for="nvidia1">Nvidia (correct)</label>
+				<p>Which of these companies does not make CPU?</p>
 				<input type="radio" name="question1" id="nvidia1" value="nvidia">
+				<label for="nvidia1">Nvidia (correct)</label>
 				<span></span><br>
 
-				<label for="intel1">Intel</label>
 				<input type="radio" name="question1" id="intel1" value="intel">
+				<label for="intel1">Intel</label>
 				<span></span><br>
 
-				<label for="amd1">AMD</label>
 				<input type="radio" name="question1" id="amd1" value="amd">
+				<label for="amd1">AMD</label>
 				<span></span><br>
 
-				Which of these companies make processors?<br>
-				<label for="nvidia2">Nvidia (correct)</label>
+				<p>Which of these companies make processors?</p>
 				<input type="checkbox" name="question2" id=nvidia2 value="nvidia">
+				<label for="nvidia2">Nvidia (correct)</label>
 				<span></span><br>
 
-				<label for="intel2">Intel (correct)</label>
 				<input type="checkbox" name="question2" id=intel2 value="intel">
+				<label for="intel2">Intel (correct)</label>
 				<span></span><br>
 
-				<label for="amd2">AMD (correct)</label>
 				<input type="checkbox" name="question2" id=amd2 value="AMD">
+				<label for="amd2">AMD (correct)</label>
 				<span></span><br>
 
-				<label for="msi">MSI (incorrect)</label>
 				<input type="checkbox" name="question2" id=msi value="msi">
+				<label for="msi">MSI (incorrect)</label>
 				<span></span><br>
 
-				What is the real name of "Team Blue"?<br>
+				<p>What is the real name of "Team Blue"? (intel)</p>
 				<input type=text name=question3 id="intel3">
 				<span></span><br>
 
