Added javascript for quiz

--- a/project3/quiz.html
+++ b/project3/quiz.html
@@ -8,6 +8,7 @@
 		<link rel="shortcut icon" href="images/favicon.ico">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/main.css">
+		<script src="scripts/quiz.js"></script>
 	</head>
 
 	<body>
@@ -16,7 +17,7 @@
 		</header>
 
 		<main>
-			<form>
+			<form action="index.html">
 				<p>Which of these companies does not make CPU?</p>
 				<input type="radio" name="question1" id="nvidia1" value="nvidia">
 				<label for="nvidia1">Nvidia (correct)</label>
@@ -52,7 +53,7 @@
 				<span></span><br>
 
 				<input type=button id="answers" value="Check Answers">
-				<input type=button id="return" value="Return to information page">
+				<input type=submit value="Return to information page">
 			</form>
 		</main>
 
