Added 4th answer to radio button

--- a/project3/quiz.html
+++ b/project3/quiz.html
@@ -30,6 +30,10 @@
 				<input type="radio" name="question1" id="amd1" value="amd">
 				<label for="amd1">AMD</label>
 				<span></span><br>
+				
+				<input type="radio" name="question1" id="none" value="none">
+				<label for="none">None of the Above</label>
+				<span></span><br>
 
 				<p>Which of these companies make processors?</p>
 				<input type="checkbox" name="question2" id=nvidia2 value="nvidia">
